--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,6 +151,43 @@ tbody tr:nth-child(even) {
   background: #f8f5f3;
 }
 
+
+@keyframes horizontalwave {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0.1;
+  }
+  50% {
+    transform: translateX(0%);
+    opacity: 0.8;
+  }
+  100% {
+    transform: translateX(100%);
+    opacity: 0.1;
+  }
+}
+
+.horizontal-effect {
+  position: relative;
+  overflow: hidden;
+}
+
+.horizontal-effect::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(231, 236, 232, 0) 0%,
+    rgba(9, 43, 10, 0.6) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  animation: horizontalwave 1s linear infinite;
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
